# idigital-python-test

./: pyproject.toml
idigital_python/: IDigital.py
idigital_python/classes/: IDigitalAccessToken.py  IDigitalConfig.py  IDigitalDiscovery.py  IDigitalException.py  IDigitalHelp.py  IDigitalHttp.py  IDigitalIDToken.py  IDigitalMessage.py  IDigitalSession.py  IDigitalToken.py
idigital_python/utils/: HttpStatus.py
