[tool.poetry]
name = "idigital-python-test"
version = "0.1.0"
description = ""
authors = ["Bruno Artur <batlopes@yahoo.com.br>"]
readme = "README.md"
packages = [{include = "idigital_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
